hace insert docente, hay que ver por que inserta asignaturas

--- a/BlackSys/Views/Docentes/Index.cshtml
+++ b/BlackSys/Views/Docentes/Index.cshtml
@@ -4,7 +4,7 @@
 @{ ViewBag.Title = "Listado";
                 Layout = "~/Views/Shared/_Layout.cshtml"; }
 <p>
-    <a class="btn btn-circle btn-primary" href=/ArticuloMaster/NuevoArticulo><i class="fa fa-plus-square"></i> Agregar Nuevo</a>
+    <a class="btn btn-circle btn-primary" href=/Docentes/AgregarDocente><i class="fa fa-plus-square"></i> Agregar Nuevo</a>
     <button class="btn btn-circle btn-primary" onclick="exportTableToExcel('sys-table')">Exportar Excel</button>
 </p>
 <div class="row">
@@ -15,7 +15,7 @@
 
         <div class="form-group">
             @*<label class="control-label" for="Nombre">Seleecione el Vendedor a consultar</label>*@
-            <h4>Escriba el nombre del articulo</h4>
+            <h4>Escriba el nombre del Docente</h4>
             @*<button></button>*@
             <input id="buscar" type="text" class="form-control" placeholder="Escriba algo para filtrar" />
             <div class="help-block with-errors"></div>
