--- a/BlackSys/Views/Docentes/AgregarDocente.cshtml
+++ b/BlackSys/Views/Docentes/AgregarDocente.cshtml
@@ -55,9 +55,9 @@
                         <li>
                             <a href="#tab-4" class="tab-link"> <span class="material-icons tab-icon">build</span> <span class="tab-label">Estudios</span></a>
                         </li>
-                        <li>
+                        @*<li>
                             <a href="#tab-5" class="tab-link"> <span class="material-icons tab-icon">toll</span> <span class="tab-label">Asignaturas</span></a>
-                        </li>
+                        </li>*@
                         <li>
                             <br />
                         </li>
@@ -455,7 +455,7 @@
                     <section id="tab-4" class="tab-body entry-content">
                         <h2>Concealer</h2>
                     </section>
-                    <section id="tab-5" class="tab-body entry-content">
+                    @*<section id="tab-5" class="tab-body entry-content">
 
                         <div class="row">
                             <div id="intro" class="col-xs-7">
@@ -474,7 +474,7 @@
 
                             @Html.Partial("_AddSubjectDocente", Model)
                         </div>
-                    </section>
+                    </section>*@
                 </div>
 
             </div>
