--- a/BlackSys/Views/Docentes/_AddSubjectDocente.cshtml
+++ b/BlackSys/Views/Docentes/_AddSubjectDocente.cshtml
@@ -1,27 +1,37 @@
 ﻿
 @model  BlackSys.Models.ViewModel.DocenteViewModel
-<table class="table table-striped table-bordered table-hover dt-responsive" id="my-tableDino23" cellspacing="0">
-    <thead>
-        <tr>
-            <th>Identificador</th>
-            <th>Asignatura</th>
+    <head>
+        <script src="~/Scripts/Controller/Root/Docentes/Details.js"></script>
+    </head>
 
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var ModelD in Model.asignaturasView)
-        {
+    <table class="table table-striped table-bordered table-hover dt-responsive" id="my-tableDino23" cellspacing="0">
+        <thead>
             <tr>
-                <td>@ModelD.Identificador</td>
-                <td>@ModelD.Asignatura</td>
+                <th>Identificador</th>
+                <th>Asignatura</th>
 
-                <td>
-
-                    @*@Html.ActionLink("Eliminar", "Eliminar", new { id = ModelD.DocenteId,AsignaturaId= ModelD.Identificador }, new { @class = "btn btn-danger btn-sm", onclick = "return confirm('¿Estás seguro de que deseas eliminar esta Asignatura?');" })*@
-                    @*@Html.ActionLink("Eliminar", "Eliminar", new { id = ModelD.DocenteId, AsignaturaId = ModelD.Identificador }, new { @class = "btn btn-danger btn-sm", onclick = "AlertDesasociarAsignatura('@ModelD.Identificador')" })*@
-                    <a onclick="AlertDesasociarAsignatura('@ModelD.Identificador')"  class="btn btn-danger btn-sm" >Desasociar</a>
-                </td>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        @*@Html.HiddenFor(Model.docente.Id)*@
+        @Html.HiddenFor(model => model.docente.Id)
+       
+        <tbody>
+
+            @foreach (var ModelD in Model.asignaturasView)
+            {
+
+                <tr>
+                    <td>@ModelD.Identificador</td>
+                    <td>@ModelD.Asignatura</td>
+
+                    <td>
+
+                        @*@Html.ActionLink("Eliminar", "Eliminar", new { id = ModelD.DocenteId,AsignaturaId= ModelD.Identificador }, new { @class = "btn btn-danger btn-sm", onclick = "return confirm('¿Estás seguro de que deseas eliminar esta Asignatura?');" })*@
+                        @*@Html.ActionLink("Eliminar", "Eliminar", new { id = ModelD.DocenteId, AsignaturaId = ModelD.Identificador }, new { @class = "btn btn-danger btn-sm", onclick = "AlertDesasociarAsignatura('@ModelD.Identificador')" })*@
+                        <a onclick="AlertDesasociarAsignatura('@ModelD.AsignaturaId')" class="btn btn-danger btn-sm">Desasociar</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
