--- a/BlackSys/Views/Docentes/ParcialListado.cshtml
+++ b/BlackSys/Views/Docentes/ParcialListado.cshtml
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     @*Neccesarios para Exportar Js*@
-    <script src="~/assets/js/popper.min.js"></script>
+    @*<script src="~/assets/js/popper.min.js"></script>*@
     <link href="~/assets/Exportar Js/tableexport.css" rel="stylesheet" />
 
     <link href="~/Content/DynaTables/jquery.dynatable.css" rel="stylesheet" />
 
-    <script src="~/Content/DynaTables/jquery.dynatableSinBuscador.js"></script>
+  
     @*<script src="~/Content/DynaTables/jquery.dynatable.js"></script>*@
 </head>
 
