--- a/BlackSys/Views/Shared/_Layout.cshtml
+++ b/BlackSys/Views/Shared/_Layout.cshtml
@@ -40,8 +40,12 @@
     <link href="~/Scripts/DataTables-1.10.18/css/jquery.dataTables.min.css" rel="stylesheet" />
     <link href="~/assets/JQUERYDATATABLEUSO/buttons.datatables.min.css" rel="stylesheet" />
     <link href="~/assets/css/bstree.css" rel="stylesheet" />
+    <link href="~/Content/css/MaterialIncons.css" rel="stylesheet" />
+    <link href="~/Content/vertical-tabs-css/dist/css/style.css" rel="stylesheet" />
+
+
     @*<link href="~/Content/sweetalert/sweetalert.css" rel="stylesheet" />
-    <link href="~/Content/sweetalert/sweetalert.js" rel="stylesheet" />*@
+        <link href="~/Content/sweetalert/sweetalert.js" rel="stylesheet" />*@
 
     <!-- END THEME STYLES -->
     @*<link rel="shortcut icon" href="favicon.ico" />*@
@@ -55,7 +59,7 @@
 
         <div class="page-header-inner">
             <div class="page-logo left">
-              
+
                 <a href="/">
                     <img style="width: 200px; height: 46px;" src="~/Imagenes/LogoUcyt.png" class="img-fluid" alt="Responsive image">
                     @*<img src="~/Imagenes/LogoOficina1.jpg"  alt="logo" class="logo-default"/>*@
@@ -74,7 +78,7 @@
 
     <div class="clearfix"></div>
     <!--BODY-->
-    
+
     <div class="page-container">
 
         <div class="page-sidebar-wrapper">
@@ -110,97 +114,97 @@
         <div class="page-content-wrapper">
             <div class="page-content">
                 @*<div class="theme-panel hidden-xs hidden-sm">
-            <div class="toggler"> </div>
-            <div class="toggler-close"> </div>
-            <div class="theme-options">
-                <div class="theme-option theme-colors clearfix">
-                    <span> THEME COLOR </span>
-                    <ul>
+                        <div class="toggler"> </div>
+                        <div class="toggler-close"> </div>
+                        <div class="theme-options">
+                            <div class="theme-option theme-colors clearfix">
+                                <span> THEME COLOR </span>
+                                <ul>
 
-                        <li class="color-darkblue tooltips" data-style="darkblue" data-container="body" data-original-title="Dark Blue"> </li>
+                                    <li class="color-darkblue tooltips" data-style="darkblue" data-container="body" data-original-title="Dark Blue"> </li>
 
-                    </ul>
-                </div>
-                <div class="theme-option">
-                    <span> Theme Style </span>
-                    <select class="layout-style-option form-control input-sm">
-                        <option value="square" selected="selected">Square corners</option>
-                        <option value="rounded">Rounded corners</option>
-                    </select>
-                </div>
-                <div class="theme-option">
-                    <span> Layout </span>
-                    <select class="layout-option form-control input-sm">
-                        <option value="fluid" selected="selected">Fluid</option>
-                        <option value="boxed">Boxed</option>
-                    </select>
-                </div>
-                <div class="theme-option">
-                    <span> Header </span>
-                    <select class="page-header-option form-control input-sm">
-                        <option value="fixed" selected="selected">Fixed</option>
-                        <option value="default">Default</option>
-                    </select>
-                </div>
-                <div class="theme-option">
-                    <span> Top Menu Dropdown</span>
-                    <select class="page-header-top-dropdown-style-option form-control input-sm">
-                        <option value="light" selected="selected">Light</option>
-                        <option value="dark">Dark</option>
-                    </select>
-                </div>
-                <div class="theme-option">
-                    <span> Sidebar Mode</span>
-                    <select class="sidebar-option form-control input-sm">
-                        <option value="fixed">Fixed</option>
-                        <option value="default" selected="selected">Default</option>
-                    </select>
-                </div>
-                <div class="theme-option">
-                    <span> Sidebar Menu </span>
-                    <select class="sidebar-menu-option form-control input-sm">
-                        <option value="accordion" selected="selected">Accordion</option>
-                        <option value="hover">Hover</option>
-                    </select>
-                </div>
-                <div class="theme-option">
-                    <span> Sidebar Style </span>
-                    <select class="sidebar-style-option form-control input-sm">
-                        <option value="default" selected="selected">Default</option>
-                        <option value="light">Light</option>
-                    </select>
-                </div>
-                <div class="theme-option">
-                    <span> Sidebar Position </span>
-                    <select class="sidebar-pos-option form-control input-sm">
-                        <option value="left" selected="selected">Left</option>
-                        <option value="right">Right</option>
-                    </select>
-                </div>
-                <div class="theme-option">
-                    <span> Footer </span>
-                    <select class="page-footer-option form-control input-sm">
-                        <option value="fixed">Fixed</option>
-                        <option value="default" selected="selected">Default</option>
-                    </select>
-                </div>
-            </div>
-        </div>*@
+                                </ul>
+                            </div>
+                            <div class="theme-option">
+                                <span> Theme Style </span>
+                                <select class="layout-style-option form-control input-sm">
+                                    <option value="square" selected="selected">Square corners</option>
+                                    <option value="rounded">Rounded corners</option>
+                                </select>
+                            </div>
+                            <div class="theme-option">
+                                <span> Layout </span>
+                                <select class="layout-option form-control input-sm">
+                                    <option value="fluid" selected="selected">Fluid</option>
+                                    <option value="boxed">Boxed</option>
+                                </select>
+                            </div>
+                            <div class="theme-option">
+                                <span> Header </span>
+                                <select class="page-header-option form-control input-sm">
+                                    <option value="fixed" selected="selected">Fixed</option>
+                                    <option value="default">Default</option>
+                                </select>
+                            </div>
+                            <div class="theme-option">
+                                <span> Top Menu Dropdown</span>
+                                <select class="page-header-top-dropdown-style-option form-control input-sm">
+                                    <option value="light" selected="selected">Light</option>
+                                    <option value="dark">Dark</option>
+                                </select>
+                            </div>
+                            <div class="theme-option">
+                                <span> Sidebar Mode</span>
+                                <select class="sidebar-option form-control input-sm">
+                                    <option value="fixed">Fixed</option>
+                                    <option value="default" selected="selected">Default</option>
+                                </select>
+                            </div>
+                            <div class="theme-option">
+                                <span> Sidebar Menu </span>
+                                <select class="sidebar-menu-option form-control input-sm">
+                                    <option value="accordion" selected="selected">Accordion</option>
+                                    <option value="hover">Hover</option>
+                                </select>
+                            </div>
+                            <div class="theme-option">
+                                <span> Sidebar Style </span>
+                                <select class="sidebar-style-option form-control input-sm">
+                                    <option value="default" selected="selected">Default</option>
+                                    <option value="light">Light</option>
+                                </select>
+                            </div>
+                            <div class="theme-option">
+                                <span> Sidebar Position </span>
+                                <select class="sidebar-pos-option form-control input-sm">
+                                    <option value="left" selected="selected">Left</option>
+                                    <option value="right">Right</option>
+                                </select>
+                            </div>
+                            <div class="theme-option">
+                                <span> Footer </span>
+                                <select class="page-footer-option form-control input-sm">
+                                    <option value="fixed">Fixed</option>
+                                    <option value="default" selected="selected">Default</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>*@
 
                 @*<div class="page-bar">
 
-            <ul class="page-breadcrumb">
-                <li>
-                    <a href="/">Home</a>
-                    <i class="fa fa-circle"></i>
-                </li>
-                <li>
-                    <span>Dashboard</span>
-                </li>
-            </ul>
-            <div class="page-toolbar">
-            </div>
-        </div>*@
+                        <ul class="page-breadcrumb">
+                            <li>
+                                <a href="/">Home</a>
+                                <i class="fa fa-circle"></i>
+                            </li>
+                            <li>
+                                <span>Dashboard</span>
+                            </li>
+                        </ul>
+                        <div class="page-toolbar">
+                        </div>
+                    </div>*@
 
                 @RenderSection("featured", required: false)
 
@@ -212,16 +216,16 @@
                 <div class="version">
                     <p>
                         Desarrollado por: BMA Developmet,Versión: 3.6 | Todos los Derechos Reservados
-                        |  Contáctenos: <i class="fa fa-globe"></i> 
-                     
+                        |  Contáctenos: <i class="fa fa-globe"></i>
+
                         | <i class="fa fa-envelope-o"></i> <a href=""></a>
                         | <i class="clip-phone-4"></i> +(505) 57239560
                     </p>
                 </div>
             </div>
-            
+
         </div>
-        
+
         <!--MODAL-->
         <div class="modal fade" id="basic" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
@@ -282,7 +286,7 @@
     <script src="~/assets/JQUERYDATATABLEUSO/dataTables.buttons.min.js"></script>
     <script src="~/assets/JQUERYDATATABLEUSO/jszip.min.js"></script>
     <script src="~/assets/JQUERYDATATABLEUSO/buttons.html5.min.js"></script>
-
+    <script src="~/Content/ScripByron/ExportarExcel.js"></script>
 
 
     <script src="/Content/plugins/datatables/datatables.js" type="text/javascript"></script>
