--- a/BlackSys/Views/Docentes/Index.cshtml
+++ b/BlackSys/Views/Docentes/Index.cshtml
@@ -5,7 +5,7 @@
                 Layout = "~/Views/Shared/_Layout.cshtml"; }
 <p>
     <a class="btn btn-circle btn-primary" href=/Docentes/AgregarDocente><i class="fa fa-plus-square"></i> Agregar Nuevo</a>
-    <button class="btn btn-circle btn-primary" onclick="exportTableToExcel('sys-table')">Exportar Excel</button>
+    @*<button class="btn btn-circle btn-primary" onclick="exportTableToExcel('sys-table')">Exportar Excel</button>*@
 </p>
 <div class="row">
 
