--- a/BlackSys/Views/Shared/_Layout.cshtml
+++ b/BlackSys/Views/Shared/_Layout.cshtml
@@ -215,11 +215,12 @@
                 @RenderBody()
                 <div class="version">
                     <p>
-                        Desarrollado por: BMA Developmet,Versión: 3.6 | Todos los Derechos Reservados
-                        |  Contáctenos: <i class="fa fa-globe"></i>
-
-                        | <i class="fa fa-envelope-o"></i> <a href=""></a>
+                        Desarrollado por: BMA Developmet V 1.0
                         | <i class="clip-phone-4"></i> +(505) 57239560
+                        |  Universidad de Ciencia y Tecnologia UCYT: <i class="fa fa-globe"></i>
+
+
+                        | <i class="clip-phone-4"></i> +(505) 2240-0789
                     </p>
                 </div>
             </div>
