--- a/BlackSys/Views/Docentes/_AddSubjectDocente.cshtml
+++ b/BlackSys/Views/Docentes/_AddSubjectDocente.cshtml
@@ -35,4 +35,4 @@
             }
         </tbody>
     </table>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>*@
