--- a/BlackSys/Views/Account/Login.cshtml
+++ b/BlackSys/Views/Account/Login.cshtml
@@ -42,12 +42,14 @@
         @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "login-form", role = "form" }))
         {
 @Html.AntiForgeryToken()
-                @Html.ValidationSummary(true, "", new { @class = "text-danger text-title" })
+@Html.ValidationSummary(true, "", new { @class = "text-danger text-title" })
                                 <h3 class="form-title">Iniciar Sesion </h3>
-                                                <div class="alert alert-danger display-hide">
-                                                    <button class="close" data-close="alert"></button>
-                                                    <span> Ingrese su usuario y Contraseña. </span>
-                                                </div>
+                                <div class="alert alert-danger display-hide">
+                                    <button class="close" data-close="alert"></button>
+                                    <h1>Bienvenid@s a Alma Mater </h1>
+                                    <h2>Sistema Académico y Administrativo </h2>
+                                    <span> Ingrese su usuario y Contraseña. </span>
+                                </div>
                                                                 <div class="form-group">
                                                                     <label class="control-label visible-ie8 visible-ie9">Usuario</label>
                                                                     <div class="input-icon">
