--- a/BlackSys/Views/Docentes/Details.cshtml
+++ b/BlackSys/Views/Docentes/Details.cshtml
@@ -20,15 +20,15 @@
 
 
     <div class="site-wrapper">
-        <section class="article-wrapper">
+        @*<section class="article-wrapper">
             <div class="article-container">
                 <div class="article-block">
                 </div>
             </div>
-        </section>
+        </section>*@
 
         @Html.ValidationSummary(false, "", new { @class = "alert alert-danger" })
-        <section class="tabs-wrapper">
+        @*<section class="tabs-wrapper">*@
             <div class="tabs-container">
 
                 <div id="tabs-section" class="tabs">
@@ -70,20 +70,32 @@
                                                     @Html.EditorFor(model => model.docente.Id, new { htmlAttributes = new { @class = "form-control col-md-3", @readonly = "true" } })
                                                     @Html.ValidationMessageFor(model => model.docente.Id, "", new { @class = "text-danger" })
                                                 </div>
-                                              
-                                                <div class="col-md-7">
-                                                  
+
+                                                <div class="col-md-10">
+
                                                     @Html.LabelFor(model => model.docente.Nombre, htmlAttributes: new { @class = "control-label" })
                                                     @Html.EditorFor(model => model.docente.Nombre, new { htmlAttributes = new { @class = "form-control col-md-4" } })
                                                     @Html.ValidationMessageFor(model => model.docente.Nombre, "", new { @class = "text-danger" })
                                                 </div>
-                                                <div class="col-md-4">
-                                                  
+
+                                            </div>
+                                        </div>
+                                        <br />
+
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <div id="intro" class="col-md-6">
+                                                    @Html.LabelFor(model => model.docente.TipoDocumentoId, htmlAttributes: new { @class = "control-label" })
+                                                    @Html.DropDownListFor(model => model.docente.TipoDocumentoId, new SelectList(ViewBag.TipoDocumentoV, "Value", "Text"), null, new { @class = "form-control" })
+
+                                                </div>
+                                                <div class="col-md-6">
+
                                                     @Html.LabelFor(model => model.docente.Cedula, htmlAttributes: new { @class = "control-label" })
                                                     @Html.EditorFor(model => model.docente.Cedula, new { htmlAttributes = new { @class = "form-control col-md-4" } })
                                                     @Html.ValidationMessageFor(model => model.docente.Cedula, "", new { @class = "text-danger" })
                                                 </div>
-                                              
+
 
                                             </div>
                                         </div>
@@ -206,7 +218,7 @@
                                                     @Html.LabelFor(model => model.docente.Estudia, htmlAttributes: new { @class = "control-label" })
                                                     @Html.CheckBoxFor(model => model.docente.Estudia)
                                                 </div>
-                                               
+
                                                 <div id="intro" class="col-md-4">
                                                     @Html.LabelFor(model => model.docente.NivelFormacionId, htmlAttributes: new { @class = "control-label" })
                                                     @Html.DropDownListFor(model => model.docente.NivelFormacionId, new SelectList(ViewBag.NivelFormacionV, "Value", "Text"), null, new { @class = "form-control" })
@@ -215,7 +227,7 @@
                                                     @Html.LabelFor(model => model.docente.TituloNivelFormacionId, htmlAttributes: new { @class = "control-label" })
                                                     @Html.DropDownListFor(model => model.docente.TituloNivelFormacionId, new SelectList(ViewBag.TituloV, "Value", "Text"), null, new { @class = "form-control" })
                                                 </div>
-                                                
+
                                             </div>
                                         </div>
                                         <br />
@@ -459,16 +471,16 @@
     <div class="form-group">
         <a>  </a>  <button type="submit" class="btn btn-circle  btn-primary "><i class="fa fa-clipboard"></i> Guardar</button>
     </div>
-    </section>
+    @*</section>*@
     </div>
-    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>*@
+
     <script src="~/Content/vertical-tabs-css/dist/js/app.js"></script>
 }
-<style>
+@*<style>
     .panel-byron > .panel-byron {
         color: brown;
         background-color: brown;
         border-color: brown;
     }
-</style>
+</style>*@
 
