--- a/BlackSys/Views/Account/Login.cshtml
+++ b/BlackSys/Views/Account/Login.cshtml
@@ -12,23 +12,23 @@
     <meta content="" name="description" />
     <meta content="Saul Henriquez" name="author" />
 
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
+    @*<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />*@
     @Styles.Render("~/Content/font-awensome")
     @Styles.Render("~/Content/simple-icons")
     @Styles.Render("~/Content/bootstrap")
     @Styles.Render("~/Content/uniform")
     @Styles.Render("~/Content/bootstrap-switch")
-    
+
     <link href="~/Content/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css" />
-    
+
     <link href="~/Content/template/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
     <link href="~/Content/template/css/plugins.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/css/login-3.css" rel="stylesheet" type="text/css" />
     @*<link rel="shortcut icon" href="favicon.ico" />*@
 </head>
 
-<body class=" login">
+<body class="login">
 
     <br />
     <br />
@@ -39,77 +39,79 @@
                 <img style="width: 200px; height: 100px;" src="~/Imagenes/LogoUcyt.png" class="img-fluid" alt="Responsive image">
             </a>
         </div>
+        <h2 style="color:darkblue">Bienvenid@s a Alma Mater </h2>
+        <h3>Sistema Académico y Administrativo </h3>
         @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "login-form", role = "form" }))
         {
-@Html.AntiForgeryToken()
-@Html.ValidationSummary(true, "", new { @class = "text-danger text-title" })
-                                <h3 class="form-title">Iniciar Sesion </h3>
-                                <div class="alert alert-danger display-hide">
-                                    <button class="close" data-close="alert"></button>
-                                    <h1>Bienvenid@s a Alma Mater </h1>
-                                    <h2>Sistema Académico y Administrativo </h2>
-                                    <span> Ingrese su usuario y Contraseña. </span>
-                                </div>
-                                                                <div class="form-group">
-                                                                    <label class="control-label visible-ie8 visible-ie9">Usuario</label>
-                                                                    <div class="input-icon">
-                                                                        <i class="fa fa-user"></i>
-                                                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control placeholder-no-fix", placeholder = "Usuario" })
-                                                                    </div>
-                                                                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger text-title" })
-                                                                </div>
-                                                                                <div class="form-group">
-                                                                                    <label class="control-label visible-ie8 visible-ie9">Contraseña</label>
-                                                                                    <div class="input-icon">
-                                                                                        <i class="fa fa-lock"></i>
-                                                                                        @Html.PasswordFor(m => m.Password, new { @class = "form-control  placeholder-no-fix", placeholder = "Contraseña" })
-                                                                                    </div>
-                                                                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger text-title" })
-                                                                                </div>
-                                                                                                <div class="form-actions">
-                                                                                                    <label class="checkbox">
-                                                                                                        @Html.CheckBoxFor(m => m.RememberMe)
-                                                                                                        Recordar Contraseña
-                                                                                                    </label>
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger text-title" })
+            @*<h3 class="form-title">Iniciar Sesion </h3>*@
+            <span> Ingrese su usuario y Contraseña. </span>
+            <div class="alert alert-danger display-hide">
+                <button class="close" data-close="alert"></button>
 
-                                                                                                    <button type="submit" class="btn green pull-right"> Iniciar </button>
-                                                                                                </div>
+                <span> Ingrese su usuario y Contraseña. </span>
+            </div>
+            <div class="form-group">
+                <label class="control-label visible-ie8 visible-ie9">Usuario</label>
+                <div class="input-icon">
+                    <i class="fa fa-user"></i>
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control placeholder-no-fix", placeholder = "Usuario" })
+                </div>
+                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger text-title" })
+            </div>
+            <div class="form-group">
+                <label class="control-label visible-ie8 visible-ie9">Contraseña</label>
+                <div class="input-icon">
+                    <i class="fa fa-lock"></i>
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control  placeholder-no-fix", placeholder = "Contraseña" })
+                </div>
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger text-title" })
+            </div>
+            <div class="form-actions">
+                <label class="checkbox">
+                    @Html.CheckBoxFor(m => m.RememberMe)
+                    Recordar Contraseña
+                </label>
 
-                                                                                                                <div class="login-options">
+                <button type="submit" class="btn green pull-right"> Iniciar </button>
+            </div>
 
-                                                                                                                    @*<h4>Registrar con</h4>
-                                                                                                                        <ul class="social-icons">
-                                                                                                                            <li>
-                                                                                                                                <a class="facebook" data-original-title="facebook" href="javascript:;"> </a>
-                                                                                                                            </li>
-                                                                                                                            <li>
-                                                                                                                                <a class="twitter" data-original-title="Twitter" href="javascript:;"> </a>
-                                                                                                                            </li>
-                                                                                                                            <li>
-                                                                                                                                <a class="googleplus" data-original-title="Goole Plus" href="javascript:;"> </a>
-                                                                                                                            </li>
-                                                                                                                            <li>
-                                                                                                                                <a class="linkedin" data-original-title="Linkedin" href="javascript:;"> </a>
-                                                                                                                            </li>
-                                                                                                                        </ul>*@
-                                                                                                                </div> @*<div class="forget-password">
-                                                                                                                        <h4>Olvido su Contraseña?</h4>
-                                                                                                                        <p>
-                                                                                                                           Click
-                                                                                                                            <a href="/Account/Reset" id="forget-password"> aqui </a> para reset de contraseña.
-                                                                                                                        </p>
-                                                                                                                    </div>*@
+            <div class="login-options">
 
-                                                                                                                                <div class="forget-password">
+                @*<h4>Registrar con</h4>
+                <ul class="social-icons">
+                    <li>
+                        <a class="facebook" data-original-title="facebook" href="javascript:;"> </a>
+                    </li>
+                    <li>
+                        <a class="twitter" data-original-title="Twitter" href="javascript:;"> </a>
+                    </li>
+                    <li>
+                        <a class="googleplus" data-original-title="Goole Plus" href="javascript:;"> </a>
+                    </li>
+                    <li>
+                        <a class="linkedin" data-original-title="Linkedin" href="javascript:;"> </a>
+                    </li>
+                </ul>*@
+            </div> @*<div class="forget-password">
+                <h4>Olvido su Contraseña?</h4>
+                <p>
+                   Click
+                    <a href="/Account/Reset" id="forget-password"> aqui </a> para reset de contraseña.
+                </p>
+            </div>*@
 
-                                                                                                                                    <p>
-                                                                                                                                        <br />
-                                                                                                                                        <br />
-                                                                                                                                        <br />
-                                                                                                                                        <br />
+            <div class="forget-password">
 
-                                                                                                                                    </p>
-                                                                                                                                </div>}
+                <p>
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+
+                </p>
+            </div>}
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
@@ -125,3 +127,11 @@
     <script src="/Content/js/login.js" type="text/javascript"></script>
 </body>
 </html>
+<style>
+    .content {
+        width: 1200px; /* Ajusta el ancho según tus necesidades */
+    }
+    .h3 {
+        width: 1200px; /* Ajusta el ancho según tus necesidades */
+    }
+</style>
