--- a/BlackSys/Views/Docentes/Details.cshtml
+++ b/BlackSys/Views/Docentes/Details.cshtml
@@ -16,7 +16,7 @@
 
 @using (Html.BeginForm())
 {
-    Html.AntiForgeryToken()
+    Html.AntiForgeryToken();
 
 
     <div class="site-wrapper">
@@ -477,6 +477,6 @@
     <script src="~/Content/vertical-tabs-css/dist/js/app.js"></script>
 }
 @*<style>
-  
-</style>*@
+
+    </style>*@
 
