--- a/BlackSys/Views/Shared/_Layout.cshtml
+++ b/BlackSys/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     @Styles.Render("~/Content/bootstrap-switch")
     <!-- END GLOBAL MANDATORY STYLES -->
     <!-- BEGIN THEME STYLES -->
-    <link href="/Content/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
+    <link href="/Content/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" 
     <link href="/Content/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
 
     <link href="/Content/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
